--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "secure-ls",
+  "name": "secure-ls2",
   "version": "2.0.0",
   "description": "Secure localStorage/sessionStorage data with high level of encryption and data compression",
   "main": "./dist/secure-ls.js",
@@ -17,7 +17,9 @@
     "prettier": "prettier -w **/*.js *.md",
     "test:dev": "jest --watch --runInBand --debug --colors --errorOnDeprecated",
     "test:prod": "jest --runInBand --colors --errorOnDeprecated",
-    "test:coverage": "jest --coverage --coverageDirectory=coverage && cat ./coverage/lcov.info"
+    "test:coverage": "jest --coverage --coverageDirectory=coverage && cat ./coverage/lcov.info",
+    "prepublishOnly": "yarn run build",
+    "release": "npx bumpp --commit --tag --push && npm publish"
   },
   "lint-staged": {
     "**/*.{js,json,md}": [
@@ -29,29 +31,29 @@
     "lz-string": "^1.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/js": "^9.2.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/js": "^9.17.0",
     "@types/crypto-js": "^4.2.2",
     "@types/lz-string": "^1.5.0",
     "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
-    "eslint": "^9.2.0",
-    "globals": "^15.4.0",
-    "husky": "^9.0.11",
+    "babel-loader": "^9.2.1",
+    "eslint": "^9.17.0",
+    "globals": "^15.13.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
-    "semver": "^7.6.2",
-    "webpack": "^5.92.0",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
+    "semver": "^7.6.3",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/softvar/secure-ls.git"
+    "url": "https://github.com/wuc656/secure-ls.git"
   },
   "keywords": [
     "secure-ls",
@@ -63,12 +65,12 @@
     "umd",
     "commonjs"
   ],
-  "author": "Varun Malhotra",
+  "author": "wuc656, Varun Malhotra",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/softvar/secure-ls/issues"
+    "url": "https://github.com/wuc656/secure-ls/issues"
   },
-  "homepage": "https://github.com/softvar/secure-ls",
+  "homepage": "https://github.com/wuc656/secure-ls",
   "engines": {
     "node": ">=8.0"
   },
