--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure-ls2",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Secure localStorage/sessionStorage data with high level of encryption and data compression",
   "main": "./dist/secure-ls.js",
   "browser": "./dist/secure-ls.js",
@@ -53,7 +53,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wuc656/secure-ls.git"
+    "url": "git+https://github.com/wuc656/secure-ls.git"
   },
   "keywords": [
     "secure-ls",
